data/forge_javadoc/1.8.9/processed/net_minecraft_client_model_ModelVillager.md
# ModelVillager

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase → net.minecraft.client.model.ModelVillager

## Class signature

```java
public class ModelVillager extends ModelBase
```

## Constructors

- `ModelVillager(float p_i1163_1_)`
- `ModelVillager(float p_i1164_1_, float p_i1164_2_, int p_i1164_3_, int p_i1164_4_)`

## Methods

- `void render(Entity entityIn, float p_78088_2_, float p_78088_3_, float p_78088_4_, float p_78088_5_, float p_78088_6_, float scale)` — Sets the models various rotation angles then renders the model.
- `void setRotationAngles(float p_78087_1_, float p_78087_2_, float p_78087_3_, float p_78087_4_, float p_78087_5_, float p_78087_6_, Entity entityIn)` — Sets the model's various rotation angles.

## Fields

- `ModelRenderer leftVillagerLeg` — The left leg of the VillagerModel
- `ModelRenderer rightVillagerLeg` — The right leg of the VillagerModel
- `ModelRenderer villagerArms` — The arms of the VillagerModel
- `ModelRenderer villagerBody` — The body of the VillagerModel
- `ModelRenderer villagerHead` — The head box of the VillagerModel
- `ModelRenderer villagerNose`